tests/negative/liquid_typecheker_bad1.sp
a : Int where a > 0 = 1;
b : Int where b < 0 = a;

main : Int () {
    return 0;
}